# Unitd

./: .clang-format  .gitignore  Doxyfile.in  README.md  install.sh  meson.build  meson_options.txt  unitd.conf  unitd_config.h.in
.cache/clangd/index/: array_wrapper.c.D132735C7335C5D4.idx  commands.c.CEF207A0A1ED8024.idx  common.c.61182F5802B86F27.idx  init.c.B224962DAC484B66.idx  logger.c.C079B62DD97DA940.idx  main.c.22C4AE9CB852BD6C.idx  main.c.77FDF9E16B68C484.idx  parser.c.7FA27FAE6FC83D0B.idx  process.c.87561F243CF5CC38.idx  signals_handler.c.720E5F2BDB9E4506.idx  socket_client.c.C32D5F11B6284C36.idx  socket_common.c.4C5A6A52664F28D3.idx  socket_request.c.7A19B8392BC098D8.idx  socket_response.c.4A1DDDDC464D4401.idx  socket_server.c.93AE7EC99CCE2335.idx  string_wrapper.c.61890A0CBE9337B2.idx  unitd.h.35F5E1098977E195.idx  unitd_impl.h.EDCAE86112DE2D73.idx  unitd_types.h.C46DE52D0EFBDD78.idx  units.c.2A27C8FA1809F526.idx
completion/bash/: unitctl  unitd  unitlogctl  unitlogd
doc/: Doc-Unitd.txt  final-dependencies.txt  init-dependencies.txt  links.txt  todo.txt
man/man8/: unitctl.8  unitd.8  unitlogctl.8  unitlogd.8
mime-type/: unit.xml  upath.xml  utimer.xml
src/core/: unitd_impl.h  unitlogd_impl.h
src/core/commands/: commands.c  commands.h
src/core/common/: common.c  common.h
src/core/file/: file.c  file.h
src/core/handlers/: cleaner.c  cleaner.h  notifier.c  notifier.h  signals.c  signals.h  signals_handler.c
src/core/init/: init.c  init.h
src/core/logger/: logger.c  logger.h
src/core/parser/: parser.c  parser.h
src/core/processes/: process.c  process.h
src/core/socket/: socket_client.c  socket_client.h  socket_common.c  socket_common.h  socket_request.c  socket_request.h  socket_response.c  socket_response.h  socket_server.c  socket_server.h
src/core/unitlog/common/: common.c
src/core/unitlogd/: common.c  signals.c  socket.c  unitlogd_impl.h
src/core/unitlogd/common/: common.c  common.h
src/core/unitlogd/signals/: signals.c  signals.h
src/core/unitlogd/socket/: socket.c  socket.h
src/core/units/: units.c  units.h
src/core/units/upath/: upath.c  upath.h
src/core/units/utimers/: utimers.c  utimers.h
src/core/wrapper/: array_wrapper.c  string_wrapper.c
src/extra/completion/bash/: unitctl
src/extra/final.state/scripts/: deactivate-devices.sh  hw-clock.sh  random-seed.sh  send-sigkill.sh  send-signals.sh  send-sigterm.sh  udev-stop.sh  umount-filesystems.sh
src/extra/final.state/units/: deactivate-devices.unit  hw-clock.unit  random-seed.unit  send-sigkill.unit  send-signals.unit  send-sigterm.unit  udev-stop.unit  umount-filesystems.unit
src/extra/functions/: functions
src/extra/init.state/scripts/: cleanup.sh  console-setup.sh  dmesg-log.sh  filesystems.sh  kmods.sh  misc.sh  pseudofs.sh  static-devnodes.sh  swap.sh  sysctl.sh  udev.sh  unitd-check.sh
src/extra/init.state/units/: cleanup.unit  console-setup.unit  dmesg-log.unit  filesystems.unit  kmods.unit  misc.unit  pseudofs.unit  static-devnodes.unit  swap.unit  sysctl.unit  udev.unit  unitd-check.unit
src/extra/man/man8/: unitd.8
src/extra/mime-type/: unit.xml
src/extra/scripts/: administrator-check.sh  cat-edit.sh  emergency-shell.sh  modules-load  send-wallmsg.sh  symlink-handle.sh  unitd-user-check.sh  unitd.sh  unitlogd.sh  user-dirs.sh  virtualization.sh
src/extra/units/: agetty-1.unit
src/include/: unitd.h  unitd_types.h
src/include/unitlogd/: unitlogd.h
src/unitlogd/: meson.build  unitlogd_impl.h
src/unitlogd/client/: client.c  client.h
src/unitlogd/common/: common.c
src/unitlogd/extra/scripts/: unitlogd.sh
src/unitlogd/file/: file.c  file.h
src/unitlogd/include/: unitlogd.h
src/unitlogd/index/: index.c  index.h
src/unitlogd/init/: init.c  init.h
src/unitlogd/logline/: logline.c  logline.h
src/unitlogd/signals/: signals.c  signals.h
src/unitlogd/socket/: socket.c  socket.h
sysctl/: 00-unitd-sockbuf.conf
units/: agetty-1.unit  sulogin.unit  unitlogd.unit
