#(C) 2021 by Domenico Panella <pandom79@gmail.com>

#This program is free software; you can redistribute it and/or modify
#it under the terms of the GNU General Public License version 3.
#See http://www.gnu.org/licenses/gpl-3.0.html for full license text.

option('UNITD_TEST', type: 'boolean', value: false, description: 'Only for unitd development')
option('OS_NAME', type: 'string', value: 'Linux', description: 'The OS name')
option('OUR_UTMP_FILE', type: 'string', value: '/var/run/utmp', description: 'The utmp login registry path')
option('OUR_WTMP_FILE', type: 'string', value: '/var/log/wtmp', description: 'The wtmp login registry path')

